добавлены жанры и рейтинг в фильм в юзер подтверждение дружбы