@@ -2,11 +2,14 @@ package ru.yandex.practicum.filmorate.storage.impl;
 
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.model.Friendship;
 import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.model.enums.FriendshipStatus;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 import ru.yandex.practicum.filmorate.utils.Utils;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 
 @Component
@@ -33,7 +36,7 @@ public class InMemoryUserStorage implements UserStorage {
 
     @Override
     public void delete(User user) {
-        ;
+        users.remove(user.getId());
     }
 
     @Override
@@ -49,25 +52,28 @@ public class InMemoryUserStorage implements UserStorage {
     @Override
     public User addFriend(Integer id, Integer friendId) {
         User user = users.get(id);
-        User userFrend = users.get(friendId);
-        if (user != null && friendId != null) {
-            user.getFriends().add(friendId);
-            userFrend.getFriends().add(id);
+        User friend = users.get(friendId);
+        if (user == null || friend == null) {
+            throw new NotFoundException("Пользователь не найден");
         }
+        user.getFriends().add(new Friendship(friendId, FriendshipStatus.UNCONFIRMED));
         return user;
     }
 
     @Override
     public void removeFriend(Integer id, Integer friendId) {
+        User user = users.get(id);
+        User friend = users.get(friendId);
+
         getUserById(id)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + id + " не найден"))
                 .getFriends()
-                .remove(friendId);
+                .removeIf(f -> f.getFriendId().equals(friendId));
 
         getUserById(friendId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + friendId + " не найден"))
                 .getFriends()
-                .remove(id);
+                .removeIf(f -> f.getFriendId().equals(id));
     }
 
     @Override
@@ -79,21 +85,42 @@ public class InMemoryUserStorage implements UserStorage {
         return user
                 .getFriends()
                 .stream()
+                .filter(friendship -> friendship.getStatus() == FriendshipStatus.UNCONFIRMED)
                 .map(users::get)
                 .toList();
     }
 
     @Override
-    public Collection<User> getMutualFriends(Integer id, Integer otherdId) {
+    public Collection<User> getMutualFriends(Integer id, Integer otherId) {
         User user = users.get(id);
-        User other = users.get(otherdId);
+        User other = users.get(otherId);
         if (user == null || other == null) {
             return Collections.emptyList();
         }
-        Set<Integer> mutualIds = new HashSet<>(user.getFriends());
-        mutualIds.retainAll(other.getFriends());
-        return mutualIds.stream()
-                .map(users::get)
-                .toList();
+        Set<Integer> confirmedFriends = user.getFriends().stream()
+                .filter(f -> f.getStatus() == FriendshipStatus.CONFIRMED)
+                .map(Friendship::getFriendId)
+                .collect(Collectors.toSet());
+
+        return other.getFriends().stream()
+                .filter(f -> f.getStatus() == FriendshipStatus.CONFIRMED && confirmedFriends.contains(f.getFriendId()))
+                .map(f -> users.get(f.getFriendId()))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public User confirmFriendRequest(Integer id, Integer friendId) {
+        User user = users.get(id);
+        User friend = users.get(friendId);
+        if (friend == null || user == null) {
+            throw new NotFoundException("Пользователь не найден");
+        }
+        friend.getFriends().stream()
+                .filter(f -> f.getFriendId().equals(id) && f.getStatus() == FriendshipStatus.UNCONFIRMED)
+                .findFirst()
+                .orElseThrow(() -> new NotFoundException("Запрос в друзья не найден"))
+                .setStatus(FriendshipStatus.CONFIRMED);
+        user.getFriends().add(new Friendship(friendId, FriendshipStatus.CONFIRMED));
+        return user;
     }
 }
